# jenny

./: .gitignore  .replit  package-lock.json  package.json  replit.nix
ai-server/: README.md  pyproject.toml
ai-server/src/jenny_ai/: ai.py  server.py
ai-server/tests/: test_ai.py  test_server.py
client/src/: main.tsx
client/src/components/: AIAssistant.tsx  BlogEditor.tsx  DocumentList.tsx  NavBar.tsx
client/src/hooks/: use-autosave.ts  use-document.ts
client/src/pages/: Auth.tsx  Dashboard.tsx  Editor.tsx
db/: schema.ts
migrations/: 0000_wakeful_james_howlett.sql  0001_regular_talkback.sql
migrations/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
server/: auth.ts  routes.ts
